# avr-net

./: .gitignore  CMakeLists.txt  README.org
include/: app.h  avrnet.h  client.h
src/: core.cc  main.cc  uip_callback.c
src/hardware/cpu/avr/: Makefile  apps-conf.h  clock-arch.c  clock-arch.h  global-conf.h  main.c  uip-conf.h
src/hardware/net/enc28j60/: enc28j60.c  global.h  network.c
src/hardware/uart/: uart.c  uart.h
src/include/: uip_callback.h  uip_core.h
src/uip/: uip.h
uip/: uip_callback.c
